--- a/Listas/index2.html
+++ b/Listas/index2.html
@@ -10,56 +10,66 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Elemento do Objeto</h1>
-        <h2>Método appendChild()</h2>
+    <div class="container-body">
+        <nav class="menu" id="menu">
+            <ul>
+                <li><a href="../index.html"">IMC</a></li>
+                <li><a href=" ../Listas/index2.html" class="active">Listas</a></li>
+                <li><a href="../Notas/nota1.html">Notas - 1</a></li>
+                <li><a href="../Notas/nota2.html">Notas - 2</a></li>
+            </ul>
+        </nav>
 
-        <ul id="myList">
-            <li>Weinbier</li>
-            <li>Patagônia</li>
-            <li>Erdinger</li>
-        </ul>
+        <div class="container">
+            <h1>Elemento do Objeto</h1>
+            <h2>Método appendChild()</h2>
 
-        <label for="altura">Acrescente uma cerveja a lista:</label>
-        <input type="text" id="texto"><br><br>
+            <ul id="myList">
+                <li>Weinbier</li>
+                <li>Patagônia</li>
+                <li>Erdinger</li>
+            </ul>
 
-        <input type="radio" id="roxo" name="cores" value="#a626a6">
-        <label for="roxo">Roxo</label><br>
-        <input type="radio" id="azul" name="cores" value="#00a8cc">
-        <label for="azul">Azul</label><br>
-        <input type="radio" id="vermelho" name="cores" value="#ab212e">
-        <label for="vermelho">Vermelho</label><br>
+            <label for="altura">Acrescente uma cerveja a lista:</label>
+            <input type="text" id="texto"><br><br>
 
-        <p>Clique em "Acrescentar" para adicionar uma cerveja ao final da lista:</p>
+            <input type="radio" id="roxo" name="cores" value="#a626a6">
+            <label for="roxo">Roxo</label><br>
+            <input type="radio" id="azul" name="cores" value="#00a8cc">
+            <label for="azul">Azul</label><br>
+            <input type="radio" id="vermelho" name="cores" value="#ab212e">
+            <label for="vermelho">Vermelho</label><br>
 
-        <button id="btn">Acrescentar</button>
+            <p>Clique em "Acrescentar" para adicionar uma cerveja ao final da lista:</p>
+
+            <button id="btn">Acrescentar</button>
+        </div>
+        <script>
+            document.getElementById("btn").addEventListener("click", myFunction);
+            function myFunction() {
+
+                // Create an "li" node:
+                const node = document.createElement("li");
+
+                // Create a text node:
+                const textnode = document.createTextNode(document.getElementById("texto").value);
+
+                const selectedRadio = document.querySelector("input[name='cores']:checked").value
+                console.log(selectedRadio) // Valor do input selecionado
+
+                // Append the text node to the "li" node:
+                node.appendChild(textnode);
+
+                // Append the "li" node to the list:
+                document.getElementById("myList").appendChild(node).style.color = selectedRadio;
+
+            }
+        </script>
+
+        <footer>
+            <img src="cerveja.png" alt="">
+        </footer>
     </div>
-    <script>
-        document.getElementById("btn").addEventListener("click", myFunction);
-        function myFunction() {
-
-            // Create an "li" node:
-            const node = document.createElement("li");
-
-            // Create a text node:
-            const textnode = document.createTextNode(document.getElementById("texto").value);
-
-            const selectedRadio = document.querySelector("input[name='cores']:checked").value
-            console.log(selectedRadio) // Valor do input selecionado
-
-            // Append the text node to the "li" node:
-            node.appendChild(textnode);
-
-            // Append the "li" node to the list:
-            document.getElementById("myList").appendChild(node).style.color = selectedRadio;
-
-        }
-    </script>
-
-    <footer>
-        <img src="cerveja.png" alt="">
-    </footer>
-
 </body>
 
 </html>
