Corrigindo cor da função

--- a/Notas/nota1.html
+++ b/Notas/nota1.html
@@ -51,10 +51,10 @@
 
                     if (media >= 6.0) {
                         situacao = "Aprovado";
-                        cor = blue;
+                        cor = "#00a8cc";
                     } else {
                         situacao = "Reprovado";
-                        cor = "red";
+                        cor = "#e02d2d";
                     }
                     document.getElementById("media").innerHTML = media;
                     document.getElementById("situacao").innerHTML = situacao;
